--- a/app/src/main/res/layout/activity_pantallaprincipal.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipal.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/logo"
-        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,8 +23,8 @@
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="1.0">
 
@@ -35,6 +35,7 @@
             app:cardCornerRadius="30dp">
 
             <EditText
+                android:id="@+id/editTexCorreo"
                 android:layout_width="350dp"
                 android:layout_height="40sp"
                 android:background="@color/white"
@@ -51,6 +52,7 @@
             app:cardCornerRadius="30dp">
 
             <EditText
+                android:id="@+id/editTextConstrasenia"
                 android:layout_width="350dp"
                 android:layout_height="40sp"
                 android:background="@color/white"
@@ -64,34 +66,31 @@
         </androidx.cardview.widget.CardView>
 
         <Button
-            android:id="@+id/btniniciarsesion"
+            android:id="@+id/btnIniciarSesion"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:backgroundTint="#ADCA96"
-            android:onClick="pantallaSesionIniciada"
             android:text="Iniciar Sesión"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
         <Button
-            android:id="@+id/btnolvidarcontraseña"
+            android:id="@+id/btnOlvidarContrasenia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:backgroundTint="#99B2D0"
-            android:onClick="recuperarContrasenia"
             android:text="¿Olvidaste la contraseña?"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/btnregistrar"
+            android:id="@+id/btnRegistrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:backgroundTint="#ADCA96"
-            android:onClick="pantallaRegistro"
             android:text="Registrarse"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -106,26 +105,26 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginLeft="60dp"
-                android:src="@drawable/logowp"
-                android:contentDescription="logowp"/>
+                android:contentDescription="logowp"
+                android:src="@drawable/logowp" />
 
             <ImageButton
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logoinsta"
-                android:contentDescription="logoinsta"/>
+                android:contentDescription="logoinsta"
+                android:src="@drawable/logoinsta" />
 
             <ImageButton
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logoface"
-                android:contentDescription="logoface"/>
+                android:contentDescription="logoface"
+                android:src="@drawable/logoface" />
 
             <ImageButton
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logotwiter"
-                android:contentDescription="logotwiter"/>
+                android:contentDescription="logotwiter"
+                android:src="@drawable/logotwiter" />
         </LinearLayout>
 
     </LinearLayout>
