--- a/app/src/main/res/layout/activity_pantallaregistro.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro.xml
@@ -16,117 +16,195 @@
         <androidx.cardview.widget.CardView
             android:layout_width="200dp"
             android:layout_height="60dp"
-            app:cardCornerRadius="30dp"
-            android:backgroundTint="#ADCA96">
+            android:backgroundTint="#ADCA96"
+            app:cardCornerRadius="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Registro"
-                android:textColor="@color/black"
-                android:textAlignment="center"
                 android:layout_marginLeft="45dp"
                 android:layout_marginTop="10sp"
-                android:textSize="30dp"/>
+                android:text="Registro"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30dp" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#C8C1C1"
-            android:layout_marginBottom="15dp"
             android:layout_marginTop="50sp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="#C8C1C1"
             app:cardCornerRadius="60dp">
 
             <EditText
+                android:id="@+id/editTextNombre"
                 android:layout_width="330dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@color/hueso"
                 android:hint="Nombre"
+                android:textAlignment="center"
                 android:textSize="25sp"
-                android:textStyle="bold"
-                android:textAlignment="center"/>
+                android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#C8C1C1"
-            app:cardCornerRadius="60dp"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="15dp">
-
-            <EditText
-                android:layout_width="330dp"
-                android:layout_height="wrap_content"
-                android:hint="Apellido"
-                android:textSize="25sp"
-                android:textStyle="bold"
-
-                android:textAlignment="center">
-            </EditText></androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#C8C1C1"
-            app:cardCornerRadius="60dp"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="15dp">
-
-            <EditText
-                android:layout_width="330dp"
-                android:layout_height="wrap_content"
-                android:hint="Contraseña"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textAlignment="center"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#C8C1C1"
-            app:cardCornerRadius="60dp"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="15dp"
-            android:textAlignment="center">
+            android:backgroundTint="#C8C1C1"
+            app:cardCornerRadius="60dp">
 
             <EditText
+                android:id="@+id/editTextApellido"
                 android:layout_width="330dp"
-                android:layout_height="wrap_content"
-                android:hint="Confirma contraseña"
+                android:layout_height="50dp"
+                android:background="@color/hueso"
+                android:hint="Apellido"
+                android:textAlignment="center"
                 android:textSize="25sp"
-                android:textStyle="bold"
-                android:textAlignment="center"/>
+
+                android:textStyle="bold"></EditText>
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="#C8C1C1"
+            app:cardCornerRadius="60dp">
+
+            <EditText
+                android:id="@+id/editTextContrasenia"
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:background="@color/hueso"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:textAlignment="center"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="#C8C1C1"
+            android:textAlignment="center"
+            app:cardCornerRadius="60dp">
+
+            <EditText
+                android:id="@+id/editTextConfirmarContrasenia"
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:background="@color/hueso"
+                android:hint="Confirma contraseña"
+                android:inputType="textPassword"
+                android:textAlignment="center"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="15dp"
+            android:backgroundTint="#C8C1C1"
+            android:textAlignment="center"
+            app:cardCornerRadius="60dp">
+
+            <EditText
+                android:id="@+id/editTextCorreoElectronico"
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:background="@color/hueso"
+                android:hint="Correo electronico"
+                android:textAlignment="center"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:text="Acepto terminos y condiciones"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/radioTerminos"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@color/hueso" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10sp"
+                android:text="Acepto politicas de tratamiento de datos"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/radioTratamientoDatos"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@color/hueso" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/btnregistro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Iniciar sesión"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
             android:layout_marginTop="30dp"
-            android:onClick="pantallaPrincipal"
+            android:backgroundTint="#E69393"
+            android:text="Registrarse"
             android:textColor="@color/black"
-            android:backgroundTint="#E69393"/>
+            android:textSize="25sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ya tienes cuenta?"
             android:layout_marginTop="25dp"
-            android:textColor="@color/white"/>
+            android:text="Ya tienes cuenta?"
+            android:textColor="@color/white" />
+
         <Button
             android:id="@+id/btnpprincipal"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:textSize="15sp"
-            android:text="Login"
+            android:backgroundTint="@color/white"
             android:onClick="pantallaPrincipal"
-            android:textStyle="bold"
+            android:text="Login"
             android:textColor="@color/black"
-            android:backgroundTint="@color/white"/>
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
